--- a/templates/data_entry.html
+++ b/templates/data_entry.html
@@ -431,6 +431,7 @@
             100% { transform: rotate(360deg); }
         }
     </style>
+    <meta name="viewport" content="width=1200">
 </head>
 <body>
     <div class="loading-overlay" id="loadingOverlay">
