--- a/templates/search_data.html
+++ b/templates/search_data.html
@@ -623,6 +623,7 @@
             /* .back-to-main-menu { ... } */
         }
     </style>
+    <meta name="viewport" content="width=1200">
 </head>
 <body>
     <div class="dashboard-layout">
