--- a/templates/edit_customer_data.html
+++ b/templates/edit_customer_data.html
@@ -445,6 +445,7 @@ body {
 
 
     </style>
+    <meta name="viewport" content="width=1200">
 </head>
 <body>
     <div class="loading-overlay" id="loadingOverlay">
