--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -331,7 +331,7 @@
             }
         }
     </style>
-
+<meta name="viewport" content="width=1200">
 </head>
 <body>
     <div class="dashboard-layout">
