--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -1198,6 +1198,8 @@ if (firstDeleteBtn) {
       const year = now.getFullYear();
       const month = String(now.getMonth() + 1).padStart(2, '0');
       const day = String(now.getDate()).padStart(2, '0');
+      const today = `${year}-${month}-${day}`; // "2025-08-07"
+      console.log(today);
       document.getElementById('approve_date').value = `${year}-${month}-${day}`;
       document.getElementById('approve_date').value = `${day}/${month}/${year}`;
       document.getElementById('approved_amount').value = safe(data['วงเงินที่อนุมัติ']);
