--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -964,7 +964,7 @@
         </div>
         <div class="form-group">
             <label class="form-label">วันที่อนุมัติ:</label>
-            <input type="text" id="approve_date" name="approve_date" class="form-input" readonly value="25/07/2567">
+            <input type="text" id="approve_date" name="approve_date" class="form-input" readonly>
         </div>
         <div class="form-group">
             <label class="form-label">วงเงินที่อนุมัติ:</label>
