--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -730,10 +730,12 @@
     font-size: 0.95em;
     padding: 4px 10px;
   }
-  #daily-job-table td:nth-child(5), #daily-job-table th:nth-child(5) {
+  #daily-job-table th:nth-child(5),
+  #daily-job-table td:nth-child(5) {
     min-width: 200px;
     width: auto;
     white-space: normal;
+    word-break: break-word;
 }
   }
 }
